--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.3.4",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.0",
